src/objects/InventoryInfo__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>棚卸データ</relationshipLabel>
        <relationshipName>masterRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BatchDate__c</fullName>
        <label>棚卸データ同期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RealQtyOfStock__c</fullName>
        <label>実際在庫数</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShelfChkFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>棚卸確認済フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StockDate__c</fullName>
        <label>棚卸日</label>
        <type>Date</type>
    </fields>
    <label>棚卸データ</label>
    <nameField>
        <displayFormat>II#{YYYYMMDD}-{00000000}</displayFormat>
        <label>棚卸No#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>